# wretch

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.MD  INSTALL.md  LICENSE  PKGBUILD  README.md  TODO.md  flake.nix  template.PKGBUILD
.github/scripts/: changelog.py  draftchangelog.py  wingetupd.py
.github/scripts/templates/winget/: TheSillyBoi.Wretch.installer.yaml  TheSillyBoi.Wretch.locale.en-US.yaml  TheSillyBoi.Wretch.yaml
.github/workflows/: draft.yml  rust.yml  test-changelog.yml  update-sources.yml
scripts/: build.rs
src/: ascii.rs  changelog.rs  coloring.rs  content.rs  main.rs  main.rs.orig  version.rs
