[package]
name = "wretch"
version = "1.1.2"
edition = "2024"
build = "scripts/build.rs"
exclude = [".github", "PKGBUILD", "template.PKGBUILD", "flake.nix", "flake.lock", "Cargo.lock"]
description = "a fetch-type CLI program that tells you info about ur system"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
repository = "https://github.com/thesillyboi/wretch"
homepage = "https://github.com/thesillyboi/wretch"
readme = "README.md"
keywords = ["fetch", "system", "info", "cli", "terminal"]
authors = ["TheSillyBoi <adrian@tennies.us>", "Cooper <cooptheloop8@gmail.com>"]
categories = ["command-line-utilities", "system-monitoring"]

[dependencies]
colored = "3.0.0"
sysinfo = "0.34.2"
whoami = "1.6.0"
clap = { version = "4", features = ["derive"] }
