[package]
name = "wretch"
version = "1.3.3"
edition = "2024"
build = "scripts/build.rs"
exclude = [".github", "PKGBUILD", "template.PKGBUILD", "flake.nix", "flake.lock", ".vscode"]
description = "A fetch-type CLI program that tells you info about your system"
license = "GPL-3.0-or-later"
repository = "https://github.com/thesillyboi/wretch"
homepage = "https://github.com/thesillyboi/wretch"
readme = "README.md"
keywords = ["fetch", "system", "info", "cli", "terminal"]
authors = ["TheSillyBoi <adrian@tennies.us>", "Cooper <cooptheloop8@gmail.com>"]
categories = ["command-line-utilities"]

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
sysinfo = "0.34.2"
whoami = "1.6.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
